Added an OrderUpdateModel class for update order, chanches in Display Page + Code for Order/Display in order to update saved order

--- a/RPDinerApp/Pages/Orders/Display.cshtml
+++ b/RPDinerApp/Pages/Orders/Display.cshtml
@@ -11,7 +11,7 @@
     <h4>The requested record was not found.</h4>
 }
 else
-{ 
+{
     <table class="table">
         <tbody>
             <tr>
@@ -36,4 +36,17 @@ else
             </tr>
         </tbody>
     </table>
+
+    <form method="post">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <input asp-for="UpdateModel.Id" value="@Model.Order.Id" type="hidden" />
+        <div class="form-group">
+            <label asp-for="UpdateModel.OrderName" class="control-label"></label>
+            <input asp-for="UpdateModel.OrderName" value="@Model.Order.OrderName" class="form-control" />
+            <span asp-validation-for="UpdateModel.OrderName" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <input type="submit" value="Update Order Name" class="btn btn-primary" />
+        </div>
+    </form>
 }
