Adde Delete page + Code for Orders int Orders/.., changed Display Page for Order with adding Delete button and redirect to Delete Order Page

--- a/RPDinerApp/Pages/Orders/Display.cshtml
+++ b/RPDinerApp/Pages/Orders/Display.cshtml
@@ -34,6 +34,11 @@ else
                 <td><strong>Quantity</strong></td>
                 <td>@Model.Order.Quantity</td>
             </tr>
+            <tr>
+                <td colspan="2">
+                    <a asp-page="./Delete" asp-route-id="@Model.Order.Id" class="btn btn-danger">Delete order</a>
+                </td>
+            </tr>
         </tbody>
     </table>
 
